minor fix to vendor_detail.html

--- a/comida/templates/comida/vendor_detail.html
+++ b/comida/templates/comida/vendor_detail.html
@@ -3,7 +3,7 @@
 <p><img src="{{ object.logo }}"/></p>
 <p><b>{{ object.name }}</b></p>
 <p>Cuisine: {{ object.cuisine }}</p>
-<p>Website: {{ object.website}}</p>
+<p>Website: <a href={{ object.website }}>{{ object.website}}</a></p>
 <p>Appearances in last 30 days: </p>
 
 <div style="width: 700px">
